[T-5] Extend logic to dynamically add new pages
