# src/Controller/PortalAPIController.php
@@ -3,7 +3,7 @@
 namespace App\Controller;
 
 use App\Business\PortalLogic;
-use App\Repository\PortalRepository;
+use App\Repository\PortalPageRepository;
 use Symfony\Bundle\FrameworkBundle\Controller\AbstractController;
 use Symfony\Component\HttpFoundation\Request;
 use Symfony\Component\HttpFoundation\Response;
@@ -13,7 +13,7 @@ use Symfony\Component\Validator\ConstraintViolationListInterface;
 #[Route('/api/v1/portal')]
 class PortalAPIController extends AbstractController
 {
-    #[Route('/legal', methods: ['GET'])]
+    #[Route('/pages', methods: ['GET'])]
     public function index(PortalLogic $portalLogic): Response
     {
         $portals = $portalLogic->index();
@@ -23,11 +23,11 @@ class PortalAPIController extends AbstractController
         ]);
     }
 
-    #[Route('/legal', methods: ['POST'])]
+    #[Route('/pages', methods: ['POST'])]
     public function create(Request $request, PortalLogic $portalLogic): Response
     {
         $requestParams = json_decode($request->getContent(), true);
-        $result = $portalLogic->create($requestParams['country_code'], $requestParams['imprint_link'], $requestParams['imprint']);
+        $result = $portalLogic->create($requestParams['country_code'], $requestParams['page_path'], $requestParams['content']);
 
         if ($result instanceof ConstraintViolationListInterface) {
             return $this->json([
@@ -42,8 +42,8 @@ class PortalAPIController extends AbstractController
         return $this->json(['portal' => $result], 201);
     }
 
-    #[Route('/legal/{id}', methods: ['PUT'])]
-    public function update(Request $request, PortalRepository $portalRepository, PortalLogic $portalLogic, int $id): Response
+    #[Route('/pages/{id}', methods: ['PUT'])]
+    public function update(Request $request, PortalPageRepository $portalRepository, PortalLogic $portalLogic, int $id): Response
     {
         $portal = $portalRepository->find($id);
         if (!isset($portal)) {
@@ -51,19 +51,19 @@ class PortalAPIController extends AbstractController
                 'error' => [
                     'code' => 404,
                     'title' => 'Not Found',
-                    'message' => 'Portal Not Found',
+                    'message' => 'PortalPage Not Found',
                 ],
             ], 404);
         }
 
         $requestParams = json_decode($request->getContent(), true);
-        $portal = $portalLogic->update($id, $requestParams['imprint_link'], $requestParams['imprint']);
+        $portal = $portalLogic->update($id, $requestParams['page_path'], $requestParams['content']);
 
         return $this->json(['portal' => $portal]);
     }
 
-    #[Route('/legal/{id}', methods: ['DELETE'])]
-    public function delete(PortalLogic $portalLogic, PortalRepository $portalRepository, int $id): Response
+    #[Route('/pages/{id}', methods: ['DELETE'])]
+    public function delete(PortalLogic $portalLogic, PortalPageRepository $portalRepository, int $id): Response
     {
         $portal = $portalRepository->find($id);
         if (!isset($portal)) {
@@ -71,7 +71,7 @@ class PortalAPIController extends AbstractController
                 'error' => [
                     'code' => 404,
                     'title' => 'Not Found',
-                    'message' => 'Portal Not Found',
+                    'message' => 'PortalPage Not Found',
                 ],
             ], 404);
         }
